web/style.css
html, body {
    background-color: #1d262c;
    
    height: calc(100% - 8px);

    display: flex;
    flex-direction: column;
}

#tabs {
    display: flex;
}

    .tab {
        background-color: #141e24;
        color: wheat;

        position: relative;
        top: 1px;

        border-radius: 5px 5px 0px 0px;
        border: 1px solid #545454;

        height: 40px;
        width: 150px;

        cursor: pointer;
        font-size: large;
        text-wrap: nowrap;
    }

        .tab.selected {
            background-color: #213039;
            border-bottom: none;
        }

#main {
    height: 100%;
    width: 100%;

    display: flex;
    gap: 24px;
}

    #contentWindow {
        background-color:#213039;
        
        border: 1px solid #545454;
        border-radius: 0px 5px 5px 5px;

        display: flex;
        align-items: center;
        justify-content: center;

        height: 100%;
        width: 100%;
    }

        #fileSelect {
            color: wheat;
            
            height: 100%;
            width: 100%;

            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: space-evenly;

            font-size: x-large;
        }

            #fileDropZone {
                background-color: #1d262c;
                
                border: 2px dashed #545454;
                border-radius: 10px;
                
                height: 70%;
                width: 90%;

                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;
            }

                #fileDropZone.active {
                    border-color: greenyellow;
                }

                    #chooseFileButton {
                        color: greenyellow;
                        background-color: #1d262c;

                        border: 2px solid greenyellow;
                        border-radius: 5px;

                        font-size: large;
                    }

                #fileSelect p {
                    margin: 10px;
                }

                #currentFile {
                    width: 90%;
                }

        #map {
            height: 100%;
            width: 100%;

            display: none; /* Application opens to file select initially */
        }

            #map button {
                background-color: #1d262c !important;
            }

            #searchBox {
                background-color: #1d262c;
                color: white;

                margin: 8px;
                position: absolute; /* Fixes big search box on page load */
                display: none; /* Application opens to file select initially */
            }

            /* Changes background for grid lines and div before map load */
            .gm-style {
                background-color: #1d262c;
            }

            /* Removes the blue border seen when interacting with the map */
            .gm-style iframe + div {
                border: none !important;
            }
    
    #buttonPanel {
        display: flex;
        flex-direction: column;

        align-items: center;
        justify-content: center;

        gap: 12px;
    }
        
        #enhanceButton {
            color: wheat;
            background-color: rgb(102, 165, 9);

            border-radius: 5px;
            border-width: 7px;

            min-height: 75px;
            min-width: 150px;

            cursor: pointer;
            font-size: x-large;
            font-weight: bold;
        }
        
        .radioButton {
            color: wheat;
            background-color: #141e24;

            border: 15px outset black;
            border-radius: 50%;

            min-height: 125px;
            min-width: 125px;

            padding-left: 8px;

            cursor: pointer;
            font-size: xx-large;
            font-weight: bold;
        }
        
            .radioButton.selected {
                border: 15px inset orange;
            }
        
            .radioButton:active {
                background-color: #213039;
            }
    
dialog {
    background-color: #213039;
    color: greenyellow;

    border-radius: 10px;
    font-size: x-large;
}

    dialog::backdrop {
        background-color: #1d262c;
        opacity: 0.75;
    }

    dialog button.okButton {
        color: greenyellow;
        background-color: #1d262c;

        border: 2px solid greenyellow;
        border-radius: 5px;

        cursor: pointer;
        font-size: large;
    }

